--- a/index.html
+++ b/index.html
@@ -39,15 +39,16 @@
 
   </div>
 
-  <div class="quiz-box">
+  <div class="timer">
     <header>
       <div class="timer"></div>
       <div class="time-text">Time:</div>
       <div class="timer-sec">60</div>
   </div>
   </header>
+</body>
 
-  <script src="./assets/script.js"></script>
+<script src="./assets/script.js"></script>
 
 </body>
 
