--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
       will penalize your scrore time by ten seconds!</span>
   </div>
 
-  <div class="controls">
-    <button id="start-btn" class="start-btn btn">Start Quiz</button>
-    <button id="next-btn" class="next-btn btn hide">Next</button>
-  </div>
+
 
 
   <div class="container">
@@ -35,15 +32,17 @@
         <button class="btn">C</button>
         <button class="btn">D</button>
       </div>
+      <p id="correctWrong"></p>
     </div>
-
+    <div class="controls">
+      <button id="start-btn" class="start-btn btn">Start Quiz</button>
+      <button id="next-btn" class="next-btn btn hide">Next</button>
+    </div>
   </div>
 
-  <div class="timer">
+  <div class="time-box">
     <header>
-      <div class="timer"></div>
-      <div class="time-text">Time:</div>
-      <div class="timer-sec">60</div>
+      <div class="timer">Time:60</div>
   </div>
   </header>
 </body>
