--- a/highscores.html
+++ b/highscores.html
@@ -2,20 +2,26 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./assets/CSS/style.css">
-  <title>Coding Quiz</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./assets/CSS/style.css">
+    <title>Coding Quiz</title>
 </head>
 
 <body>
     <div class="container">
-        <div id="highScore" class="flex-center flex-column">
-            <h1 id="finalScore">LeaderBoard</h1>
-            <ul id="highScoresList"></ul>"
-            <a href="/" class="btn">Go Home</a>
-        </div>
+        <div id="end" class='flex-center flex-column'></div>
+        <h1 id="finalScore">0</h1>
+        <form class="end-form-container">
+            <h2 id="end-text"></h2>
+            <input type="text" name="name" id="username" placeholder="Your Initials">
+            <button class="btn" id="saveScoreBtn" type="submit" onclick="saveHighScore(event)" disabled>Save</button>
+        </form>
+        <a href="/game.html" class="btn">Play Again</a>
+        <a href="/" class="btn">Go Home<i class="fas fa-home"></i></a>
     </div>
-
+  
+    <script src="highscores.js"></script>
 </body>
+</html>
