--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
       will penalize your scrore time by ten seconds!</span>
   </div>
 
-
-
-
   <div class="container">
     <div id="question-container" class="hide">
       <div id="question">Question</div>
@@ -48,6 +45,7 @@
 </body>
 
 <script src="./assets/script.js"></script>
+<a href="./assets/highscores.html">High Scores</a>
 
 </body>
 
