high scores mess

--- a/index.html
+++ b/index.html
@@ -42,10 +42,17 @@
       <div class="timer">Time:60</div>
   </div>
   </header>
+
+  <form id="initialsForm">
+    <input id="initials" placeholder="Your initials"/>
+    <button id="submitBtn">Submit</button>
+  </form>
+  
+
 </body>
 
 <script src="./assets/script.js"></script>
-<a href="./assets/highscores.html">High Scores</a>
+<a class="btn" href="./assets/highscores.html">High Scores</a>
 
 </body>
 
