--- a/assets/highscores.html
+++ b/assets/highscores.html
@@ -11,22 +11,12 @@
 </head>
 
 <body>
-    <div class="container">
-        <div id="end" class="flex-center flex-column">
-            <h1 id="finalScore"></h1>
-            <form>
-                <input type="text" name="username" id="username" placeholder="username" />
-                <button type="submit" class="btn" id="saveScoreBtn" onclick="saveHighScore(event)" disabled>
-                    Save
-                </button>
-            </form>
-            <a class="btn" href="/index.html">Play Again</a>
-            <a class="btn" href="/">Go Home</a>
-        </div>
-    </div>
-    
-<script src="/assets/highscores.js"></script>
+    <header><h1>HighScores</h1></header>
+
+        <section class="container centerText"></section>
+        <h2>HS</h2>
+        <div id="high-scores">Your Initials</div>
+    <script src="/assets/highscores.js"></script>
 </body>
+
 </html>
-
-
