--- a/assets/highscores.html
+++ b/assets/highscores.html
@@ -11,11 +11,11 @@
 </head>
 
 <body>
-    <header><h1>HighScores</h1></header>
+    <header><h1>Game Over!</h1></header>
 
         <section class="container centerText"></section>
-        <h2>HS</h2>
-        <div id="high-scores">Your Initials</div>
+        <h2>Your Score</h2>
+        <div id="high-scores">Play Again</div>
     <script src="/assets/highscores.js"></script>
 </body>
 
