--- a/assets/highscores.html
+++ b/assets/highscores.html
@@ -12,10 +12,8 @@
 
 <body>
     <header><h1>Game Over!</h1></header>
-
         <section class="container centerText"></section>
-        <h2>Your Score</h2>
-        <div id="high-scores">Play Again</div>
+        <div id="high-scores"></div>
     <script src="/assets/highscores.js"></script>
 </body>
 
